# synopsis

./: .cvsignore  CosNaming.html  MANIFEST.in  Makefile  NEWS  README  autogen.sh  configure.in  demo.py  demo2.py  genindex.html  index.html  local.mk.in  reference.html  search.html  searchindex.js  setup.cfg  setup.py  synopsis  synopsis.spec  synopsis.spec.in
Cxx-API/: Makefile.in  configure.ac  synopsis.py.in
Cxx-API/include/Synopsis/: Interpreter.hh  Kit.hh  Object.hh  Path.hh  Timer.hh  Trace.hh  TypedList.hh
Cxx-API/src/: Makefile.in  Path-posix.cc  Path-win32.cc  Path.cc  Trace.cc  synopsis.py.in
Synopsis/Parsers/C/: ASGTranslator.cc  ASGTranslator.hh  ASTTranslator.cc  ASTTranslator.hh  Context.cc  Context.hh  Debugger.cc  Debugger.hh  Declaration.cc  Declaration.hh  Expression.cc  Expression.hh  File.cc  File.hh  Grammar.y  Lexer.hh  Lexer.l  Location.cc  Location.hh  Makefile  Makefile.in  ParseEnv.cc  ParseEnv.hh  Parser.py  ParserImpl.cc  PrintTraversal.cc  PrintTraversal.hh  Printer.cc  Printer.hh  Project.cc  Project.hh  SXRGenerator.cc  SXRGenerator.hh  Statement.cc  Statement.hh  Symbol.cc  Symbol.hh  Token.cc  Token.hh  Trace.hh  (+13 more)
Synopsis/Parsers/Cpp/: ASTTranslator.cc  ASTTranslator.hh  Emulator.py  IRGenerator-depreciated.hh  IRGenerator.cc  IRGenerator.hh  Makefile.in  Parser.py  ParserImpl.cc  __init__.py  configure.ac  cpp.cc  emul.py  synopsis.py.in
Synopsis/Parsers/Cxx/: ASG.cc  ASG.hh  ASGTranslator.cc  ASGTranslator.hh  ASTTranslator.cc  ASTTranslator.hh  Builder.cc  Builder.hh  Decoder.cc  Decoder.hh  Dictionary.cc  Dictionary.hh  FakeGC.hh  Filter.cc  Filter.hh  Lookup.cc  Lookup.hh  Makefile  Makefile.in  Parser.py  ParserImpl.cc  QName.hh  README  STrace.hh  SXRBuffer.hh  SXRGenerator.cc  SXRGenerator.hh  ScopeInfo.hh  Translator.cc  Translator.hh  TypeIdFormatter.cc  TypeIdFormatter.hh  TypeInfo.hh  TypeTranslator.cc  TypeTranslator.hh  Types.cc  Types.hh  Walker.cc  Walker.hh  __init__.py  (+7 more)
Synopsis/Parsers/IDL/: Makefile  Makefile.in  Parser.py  __init__.py  config.h  configure.ac  idl.ll  idl.yy  idlast.cc  idlast.h  idlast.py  idldump.cc  idlfixed.cc  idlpython.cc  idlrepoId.cc  idlrepoId.h  idlscope.cc  idlsysdep.h  idlutil.py  idlvalidate.cc  lex.yy.cc  omni.py
doc/: ASTHierarchy.dia  Components.dia  Config.html  DataFlow.dia  Formatters.html  Linker.html  Makefile.in  Parsers.html  TypeHierarchy.dia  conf.py  configure.ac  index.html  index.rst  precompiled.txt  processor_doc.py  reference.rst  style.css  synopsis.css
doc/Manual/: .cvsignore  Makefile  Makefile.in  Manual.texi  Manual.xml  config.py  fo.xsl  html.cxx.spec  html.py.spec  html.spec  index.html  modules.py  style.css  sxr-template.html  synopsis.py  synopsis.py.in
doc/Tutorial/: .cvsignore  DevGuide.xml  Makefile  Makefile.in  Tutorial.xml  config.xml  configuration.xml  fo.xsl  html.xsl  index.html  intro.xml  parameters.py  preface.xml  synopsis.css  synopsis.xml
doc/Tutorial/examples/: Makefile  index.html
doc/Tutorial/models/: IR.mdzip
doc/_templates/: layout.html
doc/examples/: Makefile  index.rst
doc/examples/COS/: CosTradingDynamic.idl  CosTradingRepos.idl  synopsis.py
doc/examples/hybrid/: FactoryImpl.hh  StorableImpl.hh  Storage.hh  Storage.idl  synopsis.py
doc/examples/math/: Makefile  Reference.xml  synopsis.py
doc/tutorial/: DevGuide.xml  fo.xsl  html.xsl  index.rst  intro.rst  processor.rst  synopsis.css  usage.rst
doc/tutorial/models/: IR.mdzip
sandbox/: configure.ac  rsttodocbook.py
sandbox/Cxx/: ASTTranslator.cc  ASTTranslator.hh  Makefile.in  Parser.py  ParserImpl.cc  TypeTranslator.cc  TypeTranslator.hh
sandbox/boost/: Makefile  synopsis.py
sandbox/bpl/: Makefile.in  PTree.cc  Processor.cc  README  SymbolLookup.cc  SymbolTable.cc  functions.cc  test.cc
sandbox/call_graph/: call-graph.cc
sandbox/cross/: Formatter.cc  Formatter.hh  Linker.cc  Linker.hh  Makefile.in  Parser.cc  README
sandbox/wave/: ASTTranslator.cc  ASTTranslator.hh  Makefile.in  ParserImpl.cc  README  configure.ac
src/: Makefile.in  Synopsis-uninstalled.pc.in  Synopsis.pc.in  configure.ac  synopsis-uninstalled.pc.in  synopsis.pc.in  synopsis.py.in
src/Support/: ErrorHandler.cc  ErrorHandler.hh  Path-posix.cc  Path-win32.cc  Path.cc  Path.hh  Timer.hh  fspath.hh  path.hh  utils.hh
src/Synopsis/: Buffer.cc  Buffer.hh  ErrorHandler.cc  Exception.hh  Lexer.cc  Lexer.hh  PTree.hh  Parser.cc  Parser.hh  SymbolFactory.cc  SymbolFactory.hh  SymbolLookup.cc  SymbolLookup.hh  SymbolTable.hh  Timer.hh  Token.hh  Trace.hh  TypeAnalysis.hh  process_pragma.cc  process_pragma.hh
src/Synopsis/ASG/: ASGKit.hh  Declaration.hh  Declared.hh  DeclaredTypeId.hh  IR.hh  SourceFile.hh  Type.hh  TypeId.hh  TypeKit.hh  Visitor.hh
src/Synopsis/AST/: AST.hh  ASTKit.hh  Declaration.hh  Declared.hh  IR.hh  SourceFile.hh  Type.hh  TypeKit.hh  Visitor.hh
src/Synopsis/PTree/: Atoms.cc  Atoms.hh  Display.cc  Display.hh  Encoding.cc  Encoding.hh  GC-disabled.hh  GC-disabled.tmpl  GC-enabled.hh  GC-enabled.tmpl  Lists.cc  Lists.hh  Node.cc  Node.hh  NodesFwd.hh  TypeVisitor.hh  Visitor.cc  Visitor.hh  Writer.cc  Writer.hh  generation.cc  generation.hh  operations.cc  operations.hh
src/Synopsis/Python/: Object.hh  TypedList.hh
src/Synopsis/SymbolLookup/: ConstEvaluator.cc  ConstEvaluator.hh  Display.cc  Display.hh  OverloadResolver.cc  OverloadResolver.hh  Scope.cc  Scope.hh  Scopes.cc  Scopes.hh  Symbol.hh  Table.cc  Table.hh  Type.cc  Type.hh  TypeEvaluator.cc  TypeEvaluator.hh  Visitor.cc  Visitor.hh  Walker.cc  Walker.hh
src/Synopsis/SymbolTable/: Display.cc  Display.hh  Scope.cc  Scope.hh  Scopes.cc  Scopes.hh  (+4 more)
src/tools/: display-ptree.cc  display-symbols.cc  display-types.cc  dump-symbols.cc
tests/: configure.ac  context.in  expectation.xml
tests/OpenCxx/: Makefile.in
tests/Processors/: config.py  synopsis.py.in
tests/QMTest/: classes.qmc  configuration  configuration.in  synopsis_database.py  synopsis_test.py
tests/classes/: classes.qmc  synopsis_database.py  synopsis_test.py
tests/old_cxx_regressions/: regressions.py  test-template.cc  test.py
(+1192 files in other folders)
