dnl $Id: configure.in,v 1.2 2001/01/29 14:37:53 stefan Exp $
dnl
dnl This source file is a part of the Synopsis Project.
dnl Copyright (C) 2001 Stefan Seefeld <seefeld@sympatico.ca> 
dnl
dnl This library is free software; you can redistribute it and/or
dnl modify it under the terms of the GNU Library General Public
dnl License as published by the Free Software Foundation; either
dnl version 2 of the License, or (at your option) any later version.
dnl
dnl This library is distributed in the hope that it will be useful,
dnl but WITHOUT ANY WARRANTY; without even the implied warranty of
dnl MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
dnl Library General Public License for more details.
dnl
dnl You should have received a copy of the GNU Library General Public
dnl License along with this library; if not, write to the
dnl Free Software Foundation, Inc., 675 Mass Ave, Cambridge,
dnl MA 02139, USA.
dnl
dnl Process this file with autoconf to produce a configure script.

dnl ------------------------------------------------------------------
dnl Autoconf initialization
dnl ------------------------------------------------------------------
AC_PREREQ(2.12)
AC_REVISION($Revision: 1.2 $)

AC_INIT(synopsis.spec.in)
AC_PROG_MAKE_SET
AC_PROG_CC
AC_PROG_CXX
AC_PROG_INSTALL

AC_ARG_WITH(python-prefix, [  --with-python-prefix  Prefix for python],[python_prefix="$withval"])
if test ".$python_prefix" != . ; then
	PYTHON_PREFIX=$python_prefix
	PYTHON_INCLUDE=-I$python_prefix/include
else	PYTHON_PREFIX=/usr
fi
dnl
dnl check for python's C API
dnl
save_CPPFLAGS="$CPPFLAGS"
CPPFLAGS="$PYTHON_INCLUDES $CPPFLAGS"
AC_CHECK_HEADER(python2.0/Python.h,
[
	 PYTHON_MAJOR=2
	 PYTHON_MINOR=0
],
[
	AC_CHECK_HEADER(python1.6/Python.h,
	[
		PYTHON_MAJOR=1
	 	PYTHON_MINOR=6
	],
	[
		AC_CHECK_HEADER(python1.5/Python.h,
		[
			PYTHON_MAJOR=1
			PYTHON_MINOR=5
		], AC_MSG_ERROR(Could not find Python.h !))
	])
])
CPPFLAGS="$save_CPPFLAGS"
if test $PYTHON_MAJOR -eq 2 ; then
	if test $PYTHON_MINOR -eq 0 ; then
		packagedir="${PYTHON_PREFIX}/lib/python2.0/site-packages"
		PYTHON_LIB="-L${PYTHON_PREFIX}/lib/python2.0/config -lpython2.0"
	fi
fi
if test $PYTHON_MAJOR -eq 1 ; then
	if test $PYTHON_MINOR -eq 6 ; then
		packagedir="${PYTHON_PREFIX}/lib/python1.6/site-packages"
		PYTHON_LIB="-L${PYTHON_PREFIX}/lib/python1.6/config -lpython1.6"
	fi
	if test $PYTHON_MINOR -eq 5 ; then
		packagedir="${PYTHON_PREFIX}/lib/python1.5/site-packages"
		PYTHON_LIB="-L${PYTHON_PREFIX}/lib/python1.5/config -lpython2.0"
	fi
fi

AC_SUBST(PYTHON_MAJOR)
AC_SUBST(PYTHON_MINOR)
AC_SUBST(PYTHON_PREFIX)
AC_SUBST(PYTHON_LIB)
AC_SUBST(packagedir)

AC_OUTPUT([
	local.mk:local.mk.in
	synopsis.spec:synopsis.spec.in
])
