dnl $Id: configure.in,v 1.6 2001/06/10 18:48:46 stefan Exp $
dnl
dnl This source file is a part of the Synopsis Project.
dnl Copyright (C) 2001 Stefan Seefeld <seefeld@sympatico.ca> 
dnl
dnl This library is free software; you can redistribute it and/or
dnl modify it under the terms of the GNU Library General Public
dnl License as published by the Free Software Foundation; either
dnl version 2 of the License, or (at your option) any later version.
dnl
dnl This library is distributed in the hope that it will be useful,
dnl but WITHOUT ANY WARRANTY; without even the implied warranty of
dnl MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
dnl Library General Public License for more details.
dnl
dnl You should have received a copy of the GNU Library General Public
dnl License along with this library; if not, write to the
dnl Free Software Foundation, Inc., 675 Mass Ave, Cambridge,
dnl MA 02139, USA.
dnl
dnl Process this file with autoconf to produce a configure script.

dnl ------------------------------------------------------------------
dnl Autoconf initialization
dnl ------------------------------------------------------------------
AC_PREREQ(2.12)
AC_REVISION($Revision: 1.6 $)

AC_INIT(synopsis.spec.in)
AC_PROG_MAKE_SET
AC_PROG_CC
AC_PROG_CXX
AC_PROG_INSTALL

AC_ARG_WITH(python-prefix, [  --with-python-prefix  Prefix for python],[python_prefix="$withval"])
if test ".$python_prefix" != . ; then
	python_cppflags=-I$python_prefix/include
else
	python_prefix=/usr
fi

AC_ARG_WITH(python-version, [  --with-python-version  Python version to use],[python_version="$withval"])

dnl
dnl check for python's C API
dnl
save_CPPFLAGS="$CPPFLAGS"
CPPFLAGS="$python_cppflags $CPPFLAGS"
if test ".$python_version" != .; then
	AC_CHECK_HEADER(python${python_version}/Python.h,[],
		 [AC_MSG_ERROR([Could not find valid python installation for version $python_version])])
fi
if test ".$python_version" = .; then
	AC_CHECK_HEADER(python2.1/Python.h, [python_version="2.1"])
fi
if test ".$python_version" = .; then
	AC_CHECK_HEADER(python2.0/Python.h, [python_version="2.0"])
fi
if test ".$python_version" = .; then
	AC_CHECK_HEADER(python1.6/Python.h, [python_version="1.6"])
fi
if test ".$python_version" = .; then
	AC_CHECK_HEADER(python1.5/Python.h, [python_version="1.5"])
fi
if test ".$python_version" = . ; then
	AC_MSG_ERROR(Could not find valid python installation !)
fi
CPPFLAGS="$save_CPPFLAGS"
python_include="<python${python_version}/Python.h>"
python_lib="-L${python_prefix}/lib/python${python_version}/config -lpython${python_version}"

AC_SUBST(python_version)
AC_SUBST(python_prefix)
AC_SUBST(python_include)
AC_SUBST(python_lib)

AC_OUTPUT([
	local.mk:local.mk.in
	synopsis.spec:synopsis.spec.in
])
